tests/baselines/reference/staticMemberAssignsToConstructorFunctionMembers.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/memberFunctionDeclarations/staticMemberAssignsToConstructorFunctionMembers.ts(7,9): error TS2322: Type '() => 无值' is not assignable to type '(x: 数字) => 数字'.
  Type '无值' is not assignable to type '数字'.


==== tests/cases/conformance/classes/propertyMemberDeclarations/memberFunctionDeclarations/staticMemberAssignsToConstructorFunctionMembers.ts (1 errors) ====
    class C {
        static foo() {
            C.foo = () => { }
        }
    
        static bar(x: number): number {
            C.bar = () => { } // error
            ~~~~~
!!! error TS2322: Type '() => 无值' is not assignable to type '(x: 数字) => 数字'.
!!! error TS2322:   Type '无值' is not assignable to type '数字'.
            C.bar = (x) => x; // ok
            C.bar = (x: number) => 1; // ok
            return 1;
        }
    }